# book-weaver

./: .env.example  .gitignore  README.md  configure-github.sh  deploy-local.sh  deploy.sh  manual-workflow-deploy.sh  pyproject.toml  setup-github-secrets.sh  verify-deploy.sh
.github/workflows/: README.md  ci.yml  deploy.yml
backend/: .env.example  CHAPTER_MARK_API.md  ai_service.py  chapter_detector.py  config.py  conftest.py  engine_home.py  epub_spine.py  job_service.py  main.py  pdf_parser.py  progress_storage.py  prompt_templates.py  pytest.ini  reparse_pdfs.py  requirements.txt  start.sh  storage.py  test_ai_service.py  test_app_contract.py  test_boundary_merge_p0.py  test_chapter_fix.py  test_chapter_marks.py  test_engine_home.py  test_epub_pages.py  test_glossary_exclude.py  test_job_service.py  test_multiple_marks_tdd.py  test_p1_fixes.py  test_service_layer.py  test_toc_text_parser.py  test_translation_activity.py  test_translation_resume.py  toc_extractor.py  toc_text_parser.py  translation_supervisor.py
backend/archive/: add_cors.py  fix_books_endpoint.py  fix_cors.py  patch_books.py  test_chapter_extraction.py  test_parser.py  test_phase1.py  test_quick.py
docs/: BILINGUAL_KNOWLEDGE_CONTRACT.md  BOOK_PIPELINE_RULES.md  BRANCH_A_CONTRACT.md  CHANGELOG.md  HERMES_AGENT.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_PROFILES.md  PHASE_A_METHOD.md  PHASE_A_OPTIMIZATION_PLAN.md  PHASE_BOUNDARY.md  PHASE_B_FEEDBACK_WORKFLOW.md  PHASE_B_RESEARCH.md  PROJECT_IDENTITY.md  ROADMAP.md  bookmate-redirect.md  phase-a-scale-test-runbook.md
examples/phase_a_review_handoff/: README.md  run_demo.sh
examples/phase_b1_1/: README.md  (+1 more)
frontend/: .eslintrc.cjs  TESTING_GUIDE.md  TEST_REPORT.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test-fix.mjs  test-reader.mjs  test-single-chapter.mjs  vite.config.ts
scripts/: translation_supervisor.py  verify_deepl.py  verify_scale_readiness.py
tests/: test_agent_runner.py  test_book_rebuild.py  test_book_views.py  test_chapter_kind.py  test_chunking.py  test_cli.py  test_epub.py  test_epub_internal_links.py  test_epub_page_anchors.py  test_epub_typography.py  test_glossary.py  test_glossary_extraction.py  test_glossary_profiles.py  test_glossary_reset_review.py  test_glossary_sensitive_risk.py  test_glossary_suggestions.py  test_ingest.py  test_ingest_cleanup.py  test_ingest_epub.py  test_integrity.py  test_job_control.py  test_jobs.py  test_knowledge_emit.py  test_lifecycle.py  test_newspaper.py  test_newspaper_html.py  test_newspaper_illustrate.py  test_newspaper_rebuild.py  test_ng_repair.py  test_ng_salvage.py  test_non_ocr_policy.py  test_ocr_quality.py  test_page_integrity.py  test_pdf_text_repair.py  test_phase_a1_acceptance.py  test_phase_a2_acceptance.py  test_phase_a_workflow.py  test_pipeline.py  test_polish.py  test_profile.py  (+14 more)
(+113 files in other folders)
