[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-weaver"
version = "0.1.0"
description = "Book ingestion, translation, reconstruction, and knowledge-weaving pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "docling>=2.90.0",
  "markdown>=3.8",
  "reportlab>=4.4.0",
  "beautifulsoup4>=4.12.3",
  "openai>=1.109.1",
  "langdetect>=1.0.9",
  "pydantic>=2.11.4",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
book-weaver = "pdf_translator.cli:main"
pdf-translator = "pdf_translator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
