[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-weaver"
version = "0.1.0"
description = "BookWeaver Phase A: ingestion, translation, review workspace, and handoff to Phase B."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "docling>=2.90.0",
  "markdown>=3.8",
  "reportlab>=4.4.0",
  "beautifulsoup4>=4.12.3",
  "openai>=1.109.1",
  "langdetect>=1.0.9",
  "pydantic>=2.11.4",
  "requests>=2.32.0",
]

[project.optional-dependencies]
workspace = [
  "fastapi==0.115.6",
  "uvicorn>=0.27.0",
  "python-multipart>=0.0.6",
  "pymupdf==1.23.8",
  "httpx>=0.28",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "backend"]
pythonpath = ["backend"]
norecursedirs = ["backend/archive", ".venv"]
asyncio_mode = "auto"

[project.scripts]
book-weaver = "pdf_translator.cli:main"
pdf-translator = "pdf_translator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
